# vm-curator-gtk

./: Cargo.toml  README.md
assets/: vm-curator-gtk.desktop
src/: boot_dialog.rs  config_editor.rs  create_wizard.rs  display_dialog.rs  folders_dialog.rs  import_wizard.rs  main.rs  multi_gpu.rs  network_dialog.rs  notes_dialog.rs  overlay.rs  pci_dialog.rs  settings.rs  single_gpu.rs  snapshot.rs  usb_dialog.rs  vm_window.rs  window.rs
