[package]
name = "vm-curator-gtk"
version = "0.2.1"
edition = "2021"

[dependencies]
vm_curator = { git = "https://github.com/indyfive11/vm-curator", tag = "v0.4.11", package = "vm-curator" }
gtk4 = { version = "0.11", features = ["v4_18"] }
libadwaita = { version = "0.9", features = ["v1_9"] }
anyhow = "1.0"
log = { version = "0.4", features = ["std"] }
dirs = "6.0"
gtk4-layer-shell = { version = "0.8", features = ["v1_3"] }
qemu-display = { git = "https://gitlab.com/marcandre.lureau/qemu-display", package = "qemu-display" }
libc = "0.2"
async-channel = "2"
async-std = "1"
async-trait = "0.1"
keycodemap = { git = "https://gitlab.com/marcandre.lureau/qemu-display", package = "keycodemap" }
